--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "@types/react-dom": "^19.0.2",
     "@vitejs/plugin-react": "^5.1.1",
     "@vitest/ui": "^4.0.10",
+    "autoprefixer": "^10.4.22",
     "eslint": "^9.17.0",
     "eslint-config-next": "^15.1.3",
     "happy-dom": "^20.0.10",
