--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
-    "dnd-kit": "^6.1.0",
+    "@dnd-kit/core": "^6.1.0",
     "lucide-react": "^0.344.0",
     "next": "15.0.0",
     "next-auth": "^5.0.0-beta.15",
